--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-version:     "0008c--14-Feb-2022"
+version:     "0001--14-Feb-2022"
 copyright:   "2022"
-author:      "C. BinKadal"
+author:      "RynatCreznan"
 title:       "OS221: Operating Systems 2022-1"
-githublink:  "https://github.com/cbkadal/os221/"
+githublink:  "https://github.com/RynatCreznan/os221/"
 myloglink:   "/TXT/mylog.txt"
 encoding:    UTF-8
 markdown:    kramdown
